--- a/views/login.html
+++ b/views/login.html
@@ -32,7 +32,7 @@
               type="email"
               class="form-control"
               id="input-mail"
-              placeholder="correo@dominio.ext"
+              placeholder="mail@example.com"
             />
             <small class="form-text text-muted"
               >El correo con el que te registraste.</small
