Implements 'employees' list.

--- a/views/employees.html
+++ b/views/employees.html
@@ -2,16 +2,93 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Taller de Node.js S.A. de C.V.</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./js/app.js"></script>
     <script src="./js/employees.js"></script>
   </head>
   <body>
-    <h1>Bienvenido al app para gestion de datos de empleados :)</h1>
-    <h2>Taller de Node.js S.A. de C.V.</h2>
-    <div id="employee-list"></div>
+    <div class="container">
+      <div class="row mt-5 mb-4">
+        <div class="col-8 offset-2">
+          <h1>Listado de empleados</h1>
+          <small class="form-text text-muted"
+            ><span id="employees-count">0</span> encontrados.</small
+          >
+        </div>
+      </div>
+      <div class="row mb-3">
+        <div id="employee-list" class="col-8 offset-2"></div>
+      </div>
+      <div class="row mb-3 align-items-center">
+        <div class="col-8 offset-2">
+          <div class="card bg-light">
+            <div class="card-header">Crear nuevo empleado</div>
+            <div class="card-body">
+              <div class="form-group">
+                <label for="input-name">Nombre(s)</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="input-name"
+                  placeholder="Juanito"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <label for="input-last-name">Apellido(s)</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="input-last-name"
+                  placeholder="Sanchez"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <label for="input-phone-number">Teléfono</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="input-phone-number"
+                  placeholder="555-555-55-55"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <label for="input-email">Correo electrónico</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="input-email"
+                  placeholder="jsanchez@example.com"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <label for="input-address">Dirección</label>
+                <textarea
+                  class="form-control"
+                  id="input-address"
+                  required
+                ></textarea>
+              </div>
+              <div class="d-flex justify-content-between">
+                <button id="btn-submit" class="btn btn-primary">Agregar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
