Implements: employee list is updated when a new employee is created.

--- a/views/employees.html
+++ b/views/employees.html
@@ -21,9 +21,12 @@
       <div class="row mt-5 mb-4">
         <div class="col-8 offset-2">
           <h1>Listado de empleados</h1>
-          <small class="form-text text-muted"
-            ><span id="employees-count">0</span> encontrados.</small
-          >
+          <h5 class="form-text text-muted">
+            <span id="employee-count" class="badge badge-pill badge-primary"
+              >0</span
+            >
+            encontrados.
+          </h5>
         </div>
       </div>
       <div class="row mb-3">
